data/derived/comb/progs/unify/prog8048.ml.out
Characters 49-50:
  let fixpoint (f,b) = wwhile(if f = b then b else f b, b);;
                                                   ^
Error: This expression has type ('a -> 'a * bool) * 'a
       This is not a function; it cannot be applied.
